# GamesBot

./: Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  gamesbot.conf.example  libtool
games/: Makefile.am  Makefile.in  numbers.cpp
include/: commands.h  configuration.h  database.h  game.h  gamesbot.h  highscore.h  keys.h  timers.h
src/: Makefile.am  Makefile.in  commands.cpp  configuration.cpp  database.cpp  gamesbot.cpp  highscore.cpp  keys.cpp  main.cpp  mkpasswd.cpp  timers.cpp
